# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
assets/shaders/: diffuse.vert
cmake/: CommonMacros.txt
engine/: CMakeLists.txt
engine/include/common/: debug.hpp  glsl_shader.hpp
engine/include/core/: core.hpp  scene.hpp  scene_runner.hpp
engine/include/event/: event.hpp
engine/include/utils/: drawable.h  torus.h  trianglemesh.h
engine/src/common/: glsl_shader.cpp
engine/src/event/: event.cpp
engine/src/utils/: torus.cpp  trianglemesh.cpp
include/common/: glsl_shader.hpp
include/core/: core.hpp  scene.hpp  scene_runner.hpp
lib/glad/include/glad/: glad.h
sandbox/src/: main.cpp
src/: main.cpp
src/common/: glsl_shader.cpp
